--- a/landing.html
+++ b/landing.html
@@ -13,18 +13,14 @@
               <li>
                 {{loginButtons}}
               </li>
+              <li><a class="a-sem-link">Faça o login para começar</a></li>
             </ul>
           </div>
           <div class="collapse notifications-collapse" style></div>
         </div>
       </div>
-      <div class="main-container container">
-        <div class="row">
-          <div class="col-md-8">
-			<h4 class="text-center">Bem-vindo ao CanDo. Faça o login para começar.</h4>
-          </div>
-        </div>
+      <div class="iframe-wrap">
+        <iframe src="http://www.getcando.com"/>
       </div>
     </div>
-    <iframe src="http://www.getcando.com" width="100%" height="100%"/>
 </template>
