- Ignoring files for git .swp and *~ - Problema quando se cria compromisso com o outro usuario em branco

--- a/doo.html
+++ b/doo.html
@@ -37,6 +37,8 @@
               <li>
                 <a href="{{pathFor 'novoCompromisso'}}">Criar Compromisso</a>
               </li>
+            </ul>
+            <ul class="nav navbar-nav pull-right">
               <li>
                 {{loginButtons}}
               </li>
