--- a/landing.html
+++ b/landing.html
@@ -9,11 +9,11 @@
             <a href="#" class="navbar-brand">CanDo</a>
           </div>
           <div class="collapse navbar-collapse" style>
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav pull-right">
+              <li><a class="a-sem-link">Faça o login para começar</a></li>
               <li>
                 {{loginButtons}}
               </li>
-              <li><a class="a-sem-link">Faça o login para começar</a></li>
             </ul>
           </div>
           <div class="collapse notifications-collapse" style></div>
