Tele de novo compromisso - Sombra verde na foto selecionada para maior destaque - Legenda indicando quem vai entregar - Seleciona automaticamente o outro usuario como responsável pela entrega

--- a/novocompromisso.html
+++ b/novocompromisso.html
@@ -15,10 +15,10 @@
                                   </div>
                                   <div class="form-group">
                                     <div class="controls">
-                                        <label class="control-label" for="frm-para">Quem vai executar e entregar essa demanda?</label>
+                                        <label class="control-label" for="frm-para">Selecione quem vai executar e entregar essa demanda:</label>
                                         <div class="row text-center pics-box">
-                                            <div class="col-xs-6 col-sm-6 col-md-6"><img id="usuario-pic" class="profile-pic selected" src="http://graph.facebook.com/{{usuario.services.facebook.id}}/picture?width=120&height=120" title="{{usuario.profile.name}}"></div>
-                                            <div class="col-xs-6 col-sm-6 col-md-6"><img id="destinatario-pic" class="profile-pic" src="" style="display:none;"></div>
+                                            <div class="col-xs-6 col-sm-6 col-md-6"><img id="usuario-pic" class="profile-pic selected" src="http://graph.facebook.com/{{usuario.services.facebook.id}}/picture?width=120&height=120" title="{{usuario.profile.name}}"><p id="usuario-subtitle" class="label label-success profile-pic-subtitle">Você vai entregar</p></div>
+                                            <div class="col-xs-6 col-sm-6 col-md-6"><img id="destinatario-pic" class="profile-pic" src="" style="display:none;"><p id="destinatario-subtitle" class="label label-success profile-pic-subtitle" style="display:none;">O outro usuário vai entregar</p></div>
                                         </div>
                                     </div>
                                   </div>
