Chat - Auto scrolling adicionado

--- a/doo.html
+++ b/doo.html
@@ -19,7 +19,7 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
               <span class="sr-only">Menu</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
             </button>
-            <a href="{{pathFor 'home'}}" class="navbar-brand">CanDo</a>
+            <a href="{{pathFor 'home'}}" class="navbar-brand">CanDo <small>Beta</small></a>
             <div class="btn-toolbar pull-left">
               <div class="btn-group">
                 <a class="btn btn-default" href="#teste" data-icon="plus" data-transition="slideup"><!--<i class="icon-bell-alt"></i>--></a>
