Meteor atualizado do 0.7.0.0 para 0.7.0.1 Mensagem de Login no topo da Landing alterada Bugfixed: Quadro de checklist nao estava aparecendo Formulario de novo compromisso: Campo alterado de "Até quando?" para "Para quando?"

--- a/landing.html
+++ b/landing.html
@@ -10,7 +10,7 @@
           </div>
           <div class="collapse navbar-collapse" style>
             <ul class="nav navbar-nav pull-right">
-              <li><a class="a-sem-link">Faça o login para começar</a></li>
+              <li><a class="a-sem-link">Comece agora <i class="icon-double-angle-right"></i></a></li>
               <li>
                 {{loginButtons}}
               </li>
