--- a/novocompromisso.html
+++ b/novocompromisso.html
@@ -29,7 +29,7 @@
                                     </div>
                                   </div>
                                   <div class="form-group">
-                                    <label class="control-label" for="frm-vencimento">Até quando?</label>
+                                    <label class="control-label" for="frm-vencimento">Para quando?</label>
                                     <div class="controls">
                                       <input type="date" class="form-control" name="frm-vencimento" id="frm-vencimento" title="Data máxima para o compromisso ser realizado" data-type="dateIso" required="required">
                                     </div>
