--- a/landing.html
+++ b/landing.html
@@ -12,7 +12,7 @@
             <ul class="nav navbar-nav pull-right">
               <li><a class="a-sem-link">Comece agora <i class="icon-double-angle-right"></i></a></li>
               <li>
-                {{loginButtons}}
+                {{> loginButtons}}
               </li>
             </ul>
           </div>
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="iframe-wrap">
-        <iframe src="http://www.getcando.com"/>
+        <iframe src="http://www.getcando.com"></iframe>
       </div>
     </div>
 </template>
