--- a/doo.html
+++ b/doo.html
@@ -5,13 +5,10 @@
 </head>
 
 <body>
-    {{#constant}}
-        <div id="fb-root"></div>
-    {{/constant}}
-    {{yield}}
 </body>
 
 <template name="main">
+	<div id="fb-root"></div>
     <div class="container-fluid">
       <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -34,7 +31,7 @@
             </ul>
             <ul class="nav navbar-nav pull-right">
               <li>
-                {{loginButtons}}
+                {{> loginButtons}}
               </li>
             </ul>
           </div>
@@ -42,7 +39,7 @@
         </div>
       </div>
       <div class="main-container container">
-         {{yield}}
+         {{> yield}}
       </div>
     </div>
 </template>
